--- a/index.html
+++ b/index.html
@@ -366,10 +366,7 @@
                     <h1 class="display-5 mb-4 font-red text-headding ">Festival Time Line
                         <br><span
                             class="text-primary ">MMR 25</span></h1>
-                    <p class="mb-4 text-body">We are open to every photographer based in the Canada,
-                        no matter their nationality, as well as all photographers the world over.
-                        For decades all other art forms have had their own unified, national awards, while photography
-                        has not. This gave us our purpose. Want to get involved?.</p>
+                    <p class="mb-4 text-body">MMR 25 – Together is a first-of-its-kind, city-wide beach festival celebrating Negombo's cultural diversity, coastal beauty, and creative spirit. With a packed lineup of music, arts, food, and community-led experiences, this is your invitation to connect, celebrate, and belong.</p>
                     <div class="row g-4 text-dark mb-5">
                         <div class="col-sm-6 text-primary text-body">
                             <i class="fas fa-share text-primary me-2"></i>Interior Lighting Plan
