--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 
     <br><br>
-    <!-- About Satrt -->
+    <!-- timeline Satrt -->
     <div class="container-fluid py-4" id="timeline">
         <div class="container">
             <div class="row g-5 align-items-center">
@@ -369,34 +369,75 @@
                     <p class="mb-4 text-body">MMR 25 – Together is a first-of-its-kind, city-wide beach festival celebrating Negombo's cultural diversity, coastal beauty, and creative spirit. With a packed lineup of music, arts, food, and community-led experiences, this is your invitation to connect, celebrate, and belong.</p>
                     <div class="row g-4 text-dark mb-5">
                         <div class="col-sm-6 text-primary text-body">
-                            <i class="fas fa-share text-primary me-2"></i>Interior Lighting Plan
+                            <i class="fas fa-share text-primary me-2"></i>Celebrating Negombo's cultural diversity.
                         </div>
                         <div class="col-sm-6  text-primary text-body">
-                            <i class="fas fa-share text-primary me-2"></i>Colour Design Services
+                            <i class="fas fa-share text-primary me-2"></i>Celebrating Negombo's coastal beauty.
                         </div>
                         <div class="col-sm-6  text-primary text-body">
-                            <i class="fas fa-share text-primary me-2"></i>Photographic Roadshow for 2024-2025 - taking
-                            our photography to the nation!
+                            <i class="fas fa-share text-primary me-2"></i>Celebrating Negombo's creative spirit.
                         </div>
-                        <div class="col-sm-6  text-primary text-body">
-                            <i class="fas fa-share text-primary me-2"></i>Increasing Accessibility and refining our
-                            Public Voting, aiming for +10 million votes cast in 2027
-                        </div>
+                        
                     </div>
-                    <a href="./about.html" class="btn btn-primary py-3 px-5 rounded-pill">About Us<i
-                            class="fas fa-arrow-right ps-2"></i></a>
+                    
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- timeline End -->
 
     <br><br>
-    <!-- counter section -->
+    <!-- overview section -->
+    <div class=" wow bounceInUp" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="row">
+                <!-- counter -->
+                <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated"
+                    data-wow-duration="300ms"
+                    style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp;">
+                    <i class="fa fa-beer medium-icon"></i>
+                    <span id="anim-number-pizza" class="counter-number"></span>
+                    <span class="timer counter alt-font appear text-primary" data-to="10000"
+                        data-speed="7000">10000</span>
+                    <p class="counter-title">Photos</p>
+                </div>
+                <!-- end counter -->
+                <!-- counter -->
+                <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated"
+                    data-wow-duration="600ms"
+                    style="visibility: visible; animation-duration: 600ms; animation-name: fadeInUp;">
+                    <i class="fa fa-heart medium-icon"></i>
+                    <span class="timer counter alt-font appear text-primary" data-to="3000"
+                        data-speed="7000">3000</span>
+                    <span class="counter-title">Photograpas</span>
+                </div>
+                <!-- end counter -->
+                <!-- counter -->
+                <div class="col-md-3 col-sm-6 bottom-margin-small text-center counter-section wow fadeInUp xs-margin-bottom-ten animated"
+                    data-wow-duration="900ms"
+                    style="visibility: visible; animation-duration: 900ms; animation-name: fadeInUp;">
+                    <i class="fa fa-anchor medium-icon"></i>
+                    <span class="timer counter alt-font appear text-primary" data-to="109" data-speed="7000">109</span>
+                    <span class="counter-title">Partners</span>
+                </div>
+                <!-- end counter -->
+                <!-- counter -->
+                <div class="col-md-3 col-sm-6 text-center counter-section wow fadeInUp animated"
+                    data-wow-duration="1200ms"
+                    style="visibility: visible; animation-duration: 1200ms; animation-name: fadeInUp;">
+                    <i class="fa fa-user medium-icon"></i>
+                    <span class="timer counter alt-font appear text-primary" data-to="1000"
+                        data-speed="7000">1000</span>
+                    <span class="counter-title">Awared</span>
+                </div>
+                <!-- end counter -->
+            </div>
+        </div>
+        <br><br><br>
+    </div>
 
 
-
-    <!-- end of counter section -->
+    <!-- end of overview section -->
 
 
     <!-- Service Start -->
