--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>candid photography</title>
+    <title>MMR25 -  Together | City-Wide Beach Festival | Negombo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -70,7 +70,7 @@
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#timeline" class="nav-item nav-link">Time Line</a>
                         <a href="#overview" class="nav-item nav-link">Overview</a>
-                        <a href="./event.html" class="nav-item nav-link">Partners</a>
+                        <a href="#partners" class="nav-item nav-link">Partners</a>
                         <a href="./event.html" class="nav-item nav-link">Together</a>
                         <a href="./event.html" class="nav-item nav-link">Merch</a>
                         <a href="./contact.html" class="nav-item nav-link">Tickets</a>
@@ -571,63 +571,71 @@
             </div>
         </div> -->
     <!-- Service End -->
+<br><br>
+    <!-- Partners start -->
 
-    <!-- events start -->
-
-    <div class="container-fluid blog py-6 ">
+    <div class="container-fluid blog py-4 " id="partners">
         <div class="container">
             <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
                 <small
-                    class="d-inline-block fw-bold text-primary text-uppercase bg-transparent border border-primary rounded-pill px-4 py-1 mb-3">Our
-                    Events</small>
-                <h1 class="display-5 mb-5 text-white">Our Upcomming Events</h1>
+                    class="d-inline-block fw-bold text-primary text-uppercase bg-transparent border border-bottom-primary rounded-pill px-4 py-1 mb-3">Partners</small>
+                <h1 class="display-5 mb-5 text-blue text-headding">Festival Experience Partners</h1>
             </div>
             <div class="row gx-4 justify-content-center">
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s">
                     <div class="blog-item">
-                        <div class="overflow-hidden rounded">
-                            <img src="img/event-wild.jpg" class="img-fluid w-100" alt="">
+                        <div class="overflow-hidden rounded partner-card" style="position: relative;">
+                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <div class="partner-overlay d-flex align-items-center justify-content-center">
+                                <a href="#" class="btn btn-primary">Explore More</a>
+                            </div>
                         </div>
-                        <div class="blog-content mx-4 d-flex rounded ">
-                            <div class="text-dark bg-primary rounded-start">
-                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                    <p class="fw-bold mb-0">16</p>
-                                    <p class="fw-bold mb-0">Sep</p>
+                        <div class="blog-content mx-4 d-flex rounded bg-blue">
+                            <div class="text-dark  rounded-start">
+                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center rounded text-white bg-red">
+                                    <p class="fw-bold mb-0">MMR</p>
+                                    <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text ">World's Best Wild</a>
+                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text bg-blue text-white">Hotels</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.3s">
                     <div class="blog-item">
-                        <div class="overflow-hidden rounded">
-                            <img src="img/event-port.jpg" class="img-fluid w-100" alt="">
+                        <div class="overflow-hidden rounded partner-card" style="position: relative;">
+                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <div class="partner-overlay d-flex align-items-center justify-content-center">
+                                <a href="#" class="btn btn-primary">Explore More</a>
+                            </div>
                         </div>
-                        <div class="blog-content mx-4 d-flex rounded ">
-                            <div class="text-dark bg-primary rounded-start">
-                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                    <p class="fw-bold mb-0">17</p>
-                                    <p class="fw-bold mb-0">Sep</p>
+                        <div class="blog-content mx-4 d-flex rounded bg-blue">
+                            <div class="text-dark  rounded-start">
+                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center rounded text-white bg-red">
+                                    <p class="fw-bold mb-0">MMR</p>
+                                    <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text">World's Best Portrait</a>
+                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Resturants</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.5s">
                     <div class="blog-item">
-                        <div class="overflow-hidden rounded">
-                            <img src="img/event-trend.jpg" class="img-fluid w-100" alt="">
+                        <div class="overflow-hidden rounded partner-card" style="position: relative;">
+                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <div class="partner-overlay d-flex align-items-center justify-content-center">
+                                <a href="#" class="btn btn-primary">Explore More</a>
+                            </div>
                         </div>
-                        <div class="blog-content mx-4 d-flex rounded ">
-                            <div class="text-dark bg-primary rounded-start">
-                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                    <p class="fw-bold mb-0">18</p>
-                                    <p class="fw-bold mb-0">Sep</p>
+                        <div class="blog-content mx-4 d-flex rounded bg-blue">
+                            <div class="text-dark  rounded-start">
+                                <div class="h-100 p-3 d-flex flex-column justify-content-center text-center rounded text-white bg-red">
+                                    <p class="fw-bold mb-0">MMR</p>
+                                    <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text">World's Best Trend</a>
+                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Experiences</a>
                         </div>
                     </div>
                 </div>
@@ -636,7 +644,7 @@
     </div>
 
 
-    <!-- Event End -->
+    <!-- Partners End -->
 
 
     <!-- event winners  start -->
@@ -1572,104 +1580,11 @@
     <!-- Blog End -->
 
 
-    <!-- Footer Start -->
-     <!-- Footer Start -->
-     <div class="container-fluid footer py-6 my-6 mb-0  wow bounceInUp" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <img src="./img/logo.png" class="py-3" alt="">
-                        <p class="mb-4">We are open to every photographer based in the Canada, no matter their nationality, as well as British photographers the world over.</p>
-                        <div class="footer-icon d-flex">
-                            <a class="btn btn-primary btn-sm-square me-2 rounded-circle" href=""><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-primary btn-sm-square me-2 rounded-circle" href=""><i
-                                    class="fab fa-twitter"></i></a>
-                            <a href="#" class="btn btn-primary btn-sm-square me-2 rounded-circle"><i
-                                    class="fab fa-instagram"></i></a>
-                            <a href="#" class="btn btn-primary btn-sm-square rounded-circle"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="mb-4">Special Facilities</h4>
-                        <div class="d-flex flex-column align-items-start">
-                            <a class="text-body mb-3" href="./event.html"><i
-                                    class="fa fa-check text-primary me-2"></i>Gallery</a>
-                            <a class="text-body mb-3" href="./about.html"><i
-                                    class="fa fa-check text-primary me-2"></i>Who We</a>
-                                    <a class="text-body mb-3" href="./History.html"><i
-                                        class="fa fa-check text-primary me-2"></i>History</a>        
-                            <a class="text-body mb-3" href="./faq.html"><i
-                                    class="fa fa-check text-primary me-2"></i>FAQ</a>
-                            <a class="text-body mb-3" href="../PrivacyPolicy.html"><i
-                                    class="fa fa-check text-primary me-2"></i>Privacy Policy</a>
-                            <a class="text-body mb-3" href="./TermsAndConditions.html"><i
-                                    class="fa fa-check text-primary me-2"></i>Terms & Conditions</a>
-                                    <a class="text-body mb-3" href="./ReturnPolicy.html"><i
-                                        class="fa fa-check text-primary me-2"></i>Return Policy</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="mb-4">Contact Us</h4>
-                        <div class="d-flex flex-column align-items-start g-2">
-                            <a class="text-body mb-3" href="https://maps.app.goo.gl/mnWZKtm4uXPXPjwTA" target=" "><i
-                                    class="fa fa-map-marker-alt text-primary me-2"></i> Buchanan Towers 5 Kings Cross Rd
-                                1711uni Brampton L6T3X6</a>
-                            <a class="text-body mb-3" href="callto: 11234567"><i
-                                    class="fa fa-phone-alt text-primary me-2"></i> (+012) 3456 7890 123</a>
-                            <a class="text-body mb-3" href="mailto: info@candidphotographyclub.com"><i
-                                    class="fas fa-envelope text-primary me-2"></i> info@candidphotographyclub.com</a>
-                            <a class="text-body mb-3" href="callto: 325332423423"><i
-                                    class="fa fa-clock text-primary me-2"></i> 24/7 Hours Service</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="mb-4">Quick Gallery</h4>
-                        <div class="row g-2">
-                            <div class="col-4">
-                                <img src="img/menu-01.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="img/menu-02.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="img/menu-03.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="img/menu-04.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="img/menu-05.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                            <div class="col-4">
-                                <img src="img/menu-06.jpg" class="img-fluid rounded-circle border border-primary p-2"
-                                    alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer End -->
-    <!-- Footer End -->
+    
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid copyright  py-4">
+    <div class="container-fluid copyright  py-4 bg-blue">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -1677,7 +1592,8 @@
                             Photography</a>, All right reserved.</span>
                 </div>
                 <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    Designed By <a class="border-bottom" href="#">Rhytho</a>
+                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>2025 MMR 25 - Together. All rights reserved</a><br>
+                        Three Days. One City. Endless Vibes.</span>
                 </div>
             </div>
         </div>
