--- a/index.html
+++ b/index.html
@@ -1588,8 +1588,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Candid
-                            Photography</a>, All right reserved.</span>
+                    <a href="#" class="btn btn-md-square btn-secondary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+                    <a href="#" class="btn btn-md-square btn-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
                 </div>
                 <div class="col-md-6 my-auto text-center text-md-end text-white">
                     <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>2025 MMR 25 - Together. All rights reserved</a><br>
