--- a/index.html
+++ b/index.html
@@ -37,6 +37,49 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Swiper CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+
+<style>
+
+
+
+
+.card-slider {
+  padding: 0 60px !important;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 250px;
+  height: 320px;
+  border: none;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  position: relative;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease;
+}
+
+/* Hover zoom effect */
+.card:hover img {
+  transform: scale(1.05);
+}
+
+</style>
+
+
+
 </head>
 
 <body class="">
@@ -1029,66 +1072,59 @@
     <!-- Testimonial End -->
 
 
-    <!-- Blog Start -->
-    <!-- <div class="container-fluid blog py-6 ">
-            <div class="container">
-                <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-                    <small class="d-inline-block fw-bold text-primary text-uppercase bg-transparent border border-primary rounded-pill px-4 py-1 mb-3">Our Blog</small>
-                    <h1 class="display-5 mb-5 text-white">Be First Who Read News</h1>
+<!--  -->
+    <div class="container">
+            <div class="swiper card-slider">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/1.png" class="card-img-top" alt="Poster 1">
                 </div>
-                <div class="row gx-4 justify-content-center">
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s">
-                        <div class="blog-item">
-                            <div class="overflow-hidden rounded">
-                                <img src="img/prefect-shot.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content mx-4 d-flex rounded ">
-                                <div class="text-dark bg-primary rounded-start">
-                                    <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                        <p class="fw-bold mb-0">16</p>
-                                        <p class="fw-bold mb-0">Sep</p>
-                                    </div>
-                                </div>
-                                <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text ">Capturing the Perfect Shot</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.3s">
-                        <div class="blog-item">
-                            <div class="overflow-hidden rounded">
-                                <img src="img/light-shaddow.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content mx-4 d-flex rounded ">
-                                <div class="text-dark bg-primary rounded-start">
-                                    <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                        <p class="fw-bold mb-0">16</p>
-                                        <p class="fw-bold mb-0">Sep</p>
-                                    </div>
-                                </div>
-                                <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text">The Art of Light and Shadow</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.5s">
-                        <div class="blog-item">
-                            <div class="overflow-hidden rounded">
-                                <img src="img/lence-to-life.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content mx-4 d-flex rounded ">
-                                <div class="text-dark bg-primary rounded-start">
-                                    <div class="h-100 p-3 d-flex flex-column justify-content-center text-center">
-                                        <p class="fw-bold mb-0">16</p>
-                                        <p class="fw-bold mb-0">Sep</p>
-                                    </div>
-                                </div>
-                                <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text">From Lens to Life In Real</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/2.png" class="card-img-top" alt="Poster 2">
+                </div>
+                </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/3.png" class="card-img-top" alt="Poster 3">
+                </div>
+                </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/4.png" class="card-img-top" alt="Poster 4">
+                </div>
+                </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/5.png" class="card-img-top" alt="Poster 5">
+                </div>
+                </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/6.png" class="card-img-top" alt="Poster 6">
+                </div>
+                </div>
+
+                <div class="swiper-slide">
+                <div class="card">
+                    <img src="./img/together/7.png" class="card-img-top" alt="Poster 7">
+                </div>
+                </div>
+
             </div>
-        </div> -->
-    <!-- Blog End -->
+            </div>
+
+    </div>
+
+
 
 
     <!-- Contact Start -->
@@ -1210,6 +1246,36 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 
+<script>
+  var swiper = new Swiper(".card-slider", {
+    slidesPerView: 4,
+    spaceBetween: 20,
+    loop: true,
+    loopedSlides: 7, // Must match or exceed number of slides
+    autoplay: {
+      delay: 2500,
+      disableOnInteraction: false,
+    },
+    breakpoints: {
+      1200: {
+        slidesPerView: 4
+      },
+      992: {
+        slidesPerView: 3
+      },
+      768: {
+        slidesPerView: 2
+      },
+      576: {
+        slidesPerView: 1
+      }
+    }
+  });
+</script>
+
+
+
+
 
 
     <!-- Back to Top -->
@@ -1217,6 +1283,9 @@ document.addEventListener('DOMContentLoaded', function () {
 
 
     <!-- JavaScript Libraries -->
+     <!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
