--- a/index.html
+++ b/index.html
@@ -40,44 +40,6 @@
     <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
-<style>
-
-
-
-
-.card-slider {
-  padding: 0 60px !important;
-}
-
-.swiper-slide {
-  display: flex;
-  justify-content: center;
-}
-
-.card {
-  width: 250px;
-  height: 320px;
-  border: none;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-  position: relative;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.4s ease;
-}
-
-/* Hover zoom effect */
-.card:hover img {
-  transform: scale(1.05);
-}
-
-</style>
-
 
 
 </head>
@@ -114,7 +76,7 @@
                         <a href="#timeline" class="nav-item nav-link">Time Line</a>
                         <a href="#overview" class="nav-item nav-link">Overview</a>
                         <a href="#partners" class="nav-item nav-link">Partners</a>
-                        <a href="./event.html" class="nav-item nav-link">Together</a>
+                        <a href="#together" class="nav-item nav-link">Together</a>
                         <a href="./event.html" class="nav-item nav-link">Merch</a>
                         <a href="./contact.html" class="nav-item nav-link">Tickets</a>
                         <a href="./contact.html" class="nav-item nav-link">Rally</a>
@@ -690,6 +652,72 @@
     <!-- Partners End -->
 
 
+
+    <!-- together start -->
+
+    <div class="container-fluid blog py-4 " id="together">
+        <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
+                <small
+                    class="d-inline-block fw-bold text-primary text-uppercase bg-transparent border border-bottom-secondary rounded-pill px-4 py-1 mb-3">Together</small>
+                <h1 class="display-5 mb-5 text-primary text-headding">Main Day Festival - Entertainment Lineup</h1>
+            </div>
+        <div class="container wow bounceInUp">
+                <div class="swiper card-slider">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/1.png" class="card-img-top" alt="Poster 1">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/2.png" class="card-img-top" alt="Poster 2">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/3.png" class="card-img-top" alt="Poster 3">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/4.png" class="card-img-top" alt="Poster 4">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/5.png" class="card-img-top" alt="Poster 5">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/6.png" class="card-img-top" alt="Poster 6">
+                    </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                    <div class="card">
+                        <img src="./img/together/7.png" class="card-img-top" alt="Poster 7">
+                    </div>
+                    </div>
+
+                </div>
+                </div>
+
+        </div>
+
+    </div>
+
+
+    <!-- together end -->
+
+
     <!-- event winners  start -->
 
 
@@ -1073,56 +1101,7 @@
 
 
 <!--  -->
-    <div class="container">
-            <div class="swiper card-slider">
-            <div class="swiper-wrapper">
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/1.png" class="card-img-top" alt="Poster 1">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/2.png" class="card-img-top" alt="Poster 2">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/3.png" class="card-img-top" alt="Poster 3">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/4.png" class="card-img-top" alt="Poster 4">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/5.png" class="card-img-top" alt="Poster 5">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/6.png" class="card-img-top" alt="Poster 6">
-                </div>
-                </div>
-
-                <div class="swiper-slide">
-                <div class="card">
-                    <img src="./img/together/7.png" class="card-img-top" alt="Poster 7">
-                </div>
-                </div>
-
-            </div>
-            </div>
-
-    </div>
+    
 
 
 
