--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="spinner-image-wrapper" style="position: relative; display: inline-block;">
         <img src="img/logo/logo.png" alt="Loading..." style="width: 250px; height: auto; object-fit: contain;">
         <svg class="spinner-ring" width="340" height="340" viewBox="0 0 100 100" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-            <circle cx="50" cy="50" r="45" fill="none" stroke="#1b457f" stroke-width="2" stroke-linecap="round"/>
+            <circle cx="50" cy="50" r="45" fill="none" stroke="#1b457f" stroke-width="1" stroke-linecap="round"/>
         </svg>
     </div>
 </div>
@@ -79,7 +79,7 @@
                         <a href="#overview" class="nav-item nav-link">Overview</a>
                         <a href="#partners" class="nav-item nav-link">Partners</a>
                         <a href="#together" class="nav-item nav-link">Together</a>
-                        <a href="./event.html" class="nav-item nav-link">Merch</a>
+                        <a href="#merch" class="nav-item nav-link">Merch</a>
                         <a href="./contact.html" class="nav-item nav-link">Tickets</a>
                         <a href="./contact.html" class="nav-item nav-link">Rally</a>
                         <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -723,7 +723,7 @@
 
     <!-- merch start -->
 
-    <div class="container-fluid blog py-4 bg-blue id="merch">
+    <div class="container-fluid blog py-4 bg-blue" id="merch">
         <div class="container">
             <br>
             <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
